Description height fixed #354 - remove overflows from #root

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,11 +4,6 @@ html, body, #root {
   width: 100%;
 }
 
-#root {
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-
 .full-block {
   display: block;
   height: 100%;
